--- a/html-css/Module03/css/style.css
+++ b/html-css/Module03/css/style.css
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+.wrapper {
+    background: white;
+    padding: 3px;
+}
+header {
+    margin: 4px;
+    background: #194cff;
+    color: white
+}
+nav {
+    margin: 4px;
+    background: #fff511;
+    color: white;
+}
+aside, content {
+    display: inline-block;
 
-</body>
-</html>
+}
+aside {
+    margin: 4px;
+    width: 70%;
+    height: 100px;
+    background: #2c0cff;
+    color: white;
+}
+content {
+    margin: 4px;
+    width: 28.5%;
+    height: 100px;
+    background: #ff0003;
+    color: white;
+}
+footer {
+    background: #15ff00;
+    color: white;
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: -4px;
+}
