--- a/html-css/Module05/homework/task3/css/style.css
+++ b/html-css/Module05/homework/task3/css/style.css
@@ -64,6 +64,9 @@ font-family: 'Roboto', sans-serif;*/
 .link-item:hover {
     color: #85dbca;
 }
+
+
+/*Секция с картинкой бэкграундом */
 .wrap2 {
     background-image: url(../img/girls.jpg);
     -webkit-background-size: cover;
@@ -188,7 +191,7 @@ font-family: 'Roboto', sans-serif;*/
     padding: 10px;
 }
 
-/*ICON*/
+/*ICON HIDE Menu*/
 .cover {
     display: none;
     width: 255px;
