--- a/html-css/Module06/Task2/homework/css/style.css
+++ b/html-css/Module06/Task2/homework/css/style.css
@@ -113,6 +113,7 @@ font-family: 'Roboto', sans-serif;*/
 }
 
 .title-article {
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     flex-basis: 108px;
