--- a/html-css/Module07/homework/css/var.css
+++ b/html-css/Module07/homework/css/var.css
@@ -1,5 +1,7 @@
 :root {
-    --text: 'Merriweather', serif;
+    --text: 'Aquafina Script', serif;
+    --text-roboto: 'Roboto', sans-serif;
+    --text-monsterat: 'Montserrat', sans-serif;
     --btn-color: #36aeea;
 
 
