--- a/html-css/Module08/Classwork/Task1/css/style.css
+++ b/html-css/Module08/Classwork/Task1/css/style.css
@@ -156,6 +156,13 @@
         width: 39%;
         height: 50vh;
     }
-
-
+}
+.container-photo {
+    min-width: 320px;
+    max-width: 1300px;
+}
+img {
+    display: block;
+    height: auto;
+    max-width: 100%;
 }
