--- a/html-css/Module07/homework/css/style.css
+++ b/html-css/Module07/homework/css/style.css
@@ -9,204 +9,158 @@
     list-style: none;
     text-decoration: none;
     border: none;
-    font-family: var(--text);
+    /*font-family: var(--text);*/
 }
 .wrapper {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 .container {
-    min-width: 20rem;
-    max-width: 50.5rem;
+    min-width: 320px;
+    max-width: 1140px;
     margin: auto;
-    padding: 0 1rem;
-}
-/* Применяем для картинки что бы она стала резиновой!
-img {*/
-    /*display: block;*/
-    /*height: auto;*/
-    /*max-width: 100%;*/
-/*}*/
-img {
-    display: block;
-    height: auto;
-    max-width: 100%;
-}
-.nav {
-    display: none;
-}
-.logo {
-    font-weight: bold;
-    font-size: 1.125rem;
-    text-transform: uppercase;
-    color: #555555;
-    letter-spacing: 0.25rem;
 }
 .header {
-    padding: 2rem 0;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2.813rem;
+    /*margin-bottom: 8rem;*/
 }
-/*Seciton Title*/
-
-.wrapper-img {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../img/about-bg.jpg');
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
+.logo {
+    font-family: var(--text-roboto);
+    font-weight: 700;
+    font-style: italic;
+    font-size: 1.8rem;
+    color: #fedb6f;
+}
+.nav {
+    width: 50%;
+    /*display: flex;*/
+    /*align-content: center;*/
+    /*justify-content: space-between;*/
+}
+.link {
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    color: #3d3d3d;
+    font-family: var(--text-monsterat);
+    font-weight: 700;
+}
+.link:hover {
+    color: #fed136;
+}
+.main {
+    padding-bottom: 7.628rem;
+}
+.menu {
+    display: flex;
+    padding-top: 0.45rem;
+    justify-content: space-between;
 }
 .title {
-    color: #ffffff;
-    text-align: center;
-    text-transform: capitalize;
-    font-size: 2.625rem;
-}
-.about {
-    padding: 4.438rem 0;
-}
-
-/*Section Main*/
-
-.main {
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
-}
-.article-title {
-    font-size: 1.625rem;
-    font-weight: bold;
-    color: #333333;
-    letter-spacing: 0.03rem;
-    text-transform: capitalize;
-    margin-bottom: 1rem;
-}
-.section-1-article {
-    margin-bottom: 3rem;
-}
-.section-1-article:last-child {
-    margin-bottom: 0;
-}
-.section-1-article:last-child> .article-title {
     text-transform: uppercase;
+    font-size: 2.5rem;
+    font-family: var(--text-roboto);
+    font-weight: 700;
+    text-align: center;
+    padding: 8rem 0 1.438rem;
 }
-.text {
+.about-title {
+    text-align: center;
+    color: #8d8d8d;
     font-size: 1rem;
-    color: #777777;
-    margin-bottom: 0.625rem;
-    line-height: 1.625rem;
+    font-family: var(--text-monsterat);
+    font-style: italic;
+    font-weight: 700;
+    margin-bottom: 5.188rem;
 }
-.text:last-child {
-    margin-bottom: 0;
+.photo {
+    display: flex;
+    justify-content: space-between;
 }
-.section-1 {
-    margin-bottom: 3.375rem;
+.services {
+    text-align: center;
+    width: 30%;
 }
-.section-2 {
-    margin-bottom: 4.125rem;
+.title-services {
+    text-transform: capitalize;
+    font-size: 1.1rem;
+    font-family: var(--text-monsterat);
+    font-weight: 700;
+    margin: 1.75rem 0 1.313rem;
 }
-.section-2-container {
-    margin-bottom: 5.375rem;
+.text-services {
+    font-size: 0.9rem;
+    font-family: var(--text-roboto);
+    font-weight: 400;
+    color: #a2a2a2;
 }
-.article-img {
-    margin-bottom: 1.25rem;
+.title-two {
+    color: #ffffff;
 }
-.section-3-article {
-    margin-bottom: 3.375rem;
+.wrapp2 {
+    background-color: #222;
+    background-image: url(../img/map-footer.png);
+    -webkit-background-size: auto;
+    background-size: auto;
+    background-position: center right;
+    background-repeat: no-repeat;
 }
-.section-3-article:last-child {
-    margin-bottom: 0;
+.form-us {
+    display: flex;
+    justify-content: space-around;
+    min-height: 14rem;
 }
-.section-3{
-    margin-bottom: 3.375rem;
+.form-left {
+    flex-basis: 30.44rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
 }
-.wrapper-footer {
-    background-color: #000000;
+.contact-form-text, .contact-form-email, .subject-form {
+    width: 100%;
+    color: #cacaca;
+    padding: 1.2rem;
+    border: 2px solid #413d46;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-family: var(--text-monsterat);
+    font-weight: 700;
+}
+.contact-form-text:hover  {
+    border: 3px solid #00ff79;
+}
+.contact-form-email:hover {
+    border: 3px solid #00ff79;
+}
+.subject-form:hover {
+    border: 3px solid #00ff79;
+}
+.comments:hover {
+    border: 3px solid #00ff79;
+}
+.comments {
+    flex-basis: 30.44rem;
+    padding: 1.3rem 0 0 1.3rem;
+    text-transform: uppercase;
+    font-family: var(--text-monsterat);
+    font-weight: 700;
+    border: 2px solid #413d46;
+    border-radius: 3px;
+}
+
+.contact-form-btn {
+    display: block;
+    margin: auto;
+    background-color: #fed136;
+    color: #ffffff;
+    padding: 1.5rem 2.938rem;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-family: var(--text-roboto);
+    font-weight: 700;
+    border-radius: 5px;
+    margin-top: 1.8rem;
 }
 .footer {
-    padding: 5rem 0;
-}
-.article-title-color {
-    color: #ffffff;
-}
-.footer-article {
-    margin-bottom: 3.25rem;
-}
-.footer-article:last-child {
-    margin-bottom: 0;
-}
-.contact-item {
-    color: #777777;
-    font-size: 1rem;
-    line-height: 1.625rem;
-    margin-bottom: 0.625em;
-}
-.contact-item:last-child {
-    margin-bottom: 0;
-}
-
-@media (min-width: 768px) {
-    .nav {
-        display: block;
-        flex-basis: 52%;
-    }
-    .header {
-        display: flex;
-        justify-content: space-between;
-    }
-    .menu {
-        display: flex;
-        justify-content: space-around;
-    }
-    .menu-link {
-        text-transform: capitalize;
-        color: #777777;
-    }
-    .menu-link:hover {
-        color: #bfba55;
-    }
-    .section-1 {
-        display: flex;
-        justify-content: space-between;
-    }
-    .section-1-article {
-        margin-bottom: 0;
-        flex-basis: 32%;
-    }
-    .article-size {
-        font-size: 2rem;
-    }
-    .section-2 {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-    .section-2-img {
-        width: 42%;
-    }
-    .section-2-container {
-        flex-basis: 50%;
-        margin-bottom: 0;
-    }
-    .section-3 {
-        display: flex;
-        justify-content: space-between;
-    }
-    .section-3-article {
-        flex-basis: 31%;
-        margin-bottom: 0;
-    }
-    .footer {
-        display: flex;
-        justify-content: space-around;
-    }
-    .footer-article {
-        flex-basis: 45%;
-        margin-bottom: 0;
-    }
-}
-@media (min-width: 992px) {
-    .about {
-        padding: 11rem 0;
-    }
-    .title {
-        font-size: 3.875rem;
-    }
+    padding-bottom: 7rem;
 }
