--- a/html-css/Module07/homework/css/var.css
+++ b/html-css/Module07/homework/css/var.css
@@ -3,6 +3,6 @@
     --text-roboto: 'Roboto', sans-serif;
     --text-monsterat: 'Montserrat', sans-serif;
     --btn-color: #36aeea;
-
-
+    --text-pinyon: 'Pinyon', sans-serif;
+    --text-wisdom: 'Wisdom', sans-serif;
 }
