--- a/html-css/Module07/homework/css/style.css
+++ b/html-css/Module07/homework/css/style.css
@@ -26,10 +26,11 @@
     /*margin-bottom: 8rem;*/
 }
 .logo {
-    font-family: var(--text-roboto);
-    font-weight: 700;
-    font-style: italic;
-    font-size: 1.8rem;
+    font-family: var(--text-wisdom);
+    text-transform: capitalize;
+    font-weight: 400;
+    /*font-style: italic;*/
+    font-size: 2.1rem;
     color: #fedb6f;
 }
 .nav {
